k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        fsGroup: 65534
      volumes:
        # Create the shared files volume to be used in both pods
        - name: shared-files
          emptyDir: {}
        - name: database
          secret:
            secretName: database
        - name: app
          secret:
            secretName: app
        - name: limesurvey
          secret:
            secretName: limesurvey
        - name: smtp
          secret:
            secretName: smtp
        - name: nginx-config-volume
          configMap:
            name: nginx-config
        - name: app-config-volume
          configMap:
            name: app-config
      containers:
        # Our PHP-FPM application
        - name: app
          image: ghcr.io/herams-who/herams-backend/app:latest
          imagePullPolicy: Always

          volumeMounts:
            - name: app-config-volume
              mountPath: "/run/config"
            - name: database
              mountPath: "/run/secrets/database"
            - name: limesurvey
              mountPath: "/run/secrets/limesurvey"
            - name: smtp
              mountPath: "/run/secrets/smtp"
            - name: app
              mountPath: "/run/secrets/app"
            - name: shared-files
              mountPath: /var/www/html

        # Our nginx container, which uses the configuration declared above,
        # along with the files shared with the PHP-FPM app.
        - image: nginx
          name: nginx
          command: ["nginx", "-g", "daemon off;", "-c", "/config/nginx.conf"]
          #livenessProbe:
          #  httpGet:
          #    path: /
          #    port: 80
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - name: nginx-config-volume
              mountPath: /config
