k8s/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
      - "*.${domain}"
      - ${domain}
      secretName: ${domain}.tls
  rules:
  - host: www.${domain}
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: ${domain}
    http:
      paths:
      - backend:
          service:
            name: app-service
            port:
              number: 80
        pathType: ImplementationSpecific
